<resources>
    <string name="app_name">myechelon</string>
    <string name="skip">Skip</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="or">OR</string>
    <string name="phone_no">email</string>
    <string name="pass">password</string>
    <string name="login">login</string>
    <string name="forgot_pass">forgot password</string>
    <string name="new_user">new user?</string>
    <string name="signup_here">signup here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>

