<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bk"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        >



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
             android:src="@drawable/myechelon"
            android:layout_marginTop="1dp"

            android:layout_alignParentStart="true" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phone_number"
            android:layout_below="@+id/logo"
            android:layout_marginLeft="@dimen/padding_extra_large_20"
            android:layout_marginRight="@dimen/padding_extra_large_20"
            android:layout_marginTop="@dimen/padding_small_5"
            android:paddingLeft="@dimen/padding_small_5"
            android:hint="@string/phone_no"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:layout_below="@+id/phone_number"
            android:layout_marginLeft="@dimen/padding_extra_large_20"
            android:layout_marginRight="@dimen/padding_extra_large_20"
            android:layout_marginTop="@dimen/padding_small_5"
            android:paddingLeft="@dimen/padding_small_5"
            android:hint="@string/pass"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_pass"

            android:layout_below="@+id/login"
            android:layout_marginTop="@dimen/padding_extra_large_20"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/or"
            android:layout_centerHorizontal="true"
            android:text="@string/or"

            android:layout_below="@+id/forgot"
            android:layout_marginTop="@dimen/padding_medium_10"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:id="@+id/new_user"
            android:layout_alignParentBottom="true"
            android:text="@string/new_user"
            android:textColor="@color/txt_color"
            android:layout_below="@id/or"
            android:layout_marginLeft="@dimen/padding_100"
            android:layout_marginTop="@dimen/padding_extra_large_20"



            />

        <Button
            android:layout_width="match_parent"
            android:id="@+id/signup"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/signup_here"

            android:background="@color/blue"
            android:textColor="@color/white"
            android:layout_below="@id/or"
            android:layout_toRightOf="@id/new_user"
            android:layout_marginLeft="@dimen/padding_extra_large_20"
            android:layout_marginTop="@dimen/padding_extra_large_20"



            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/login"
            android:layout_centerHorizontal="true"
            android:text="@string/login"
            android:background="@color/blue"
            android:paddingTop="@dimen/padding_medium_10"
            android:paddingBottom="@dimen/padding_medium_10"

            android:textColor="@color/white"
            android:layout_below="@id/password"
            android:layout_marginTop="@dimen/padding_extra_large_20"

            />
    </RelativeLayout>
</ScrollView>